--- a/res/mae_signalanalysis_gui.ui
+++ b/res/mae_signalanalysis_gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>825</width>
-    <height>692</height>
+    <width>819</width>
+    <height>657</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -53,8 +53,8 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>11</x>
-     <y>10</y>
+     <x>10</x>
+     <y>0</y>
      <width>801</width>
      <height>71</height>
     </rect>
@@ -111,7 +111,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>460</y>
+     <y>430</y>
      <width>801</width>
      <height>221</height>
     </rect>
@@ -124,44 +124,8 @@
      <string>Mode Estimation</string>
     </attribute>
     <layout class="QGridLayout" name="gridLayout">
-<<<<<<< Updated upstream
-     <item row="0" column="0">
-      <widget class="QPushButton" name="btnBasicMethod">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="minimumSize">
-        <size>
-         <width>96</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="baseSize">
-        <size>
-         <width>96</width>
-         <height>32</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Basic</string>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>32</width>
-         <height>32</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1" rowspan="5">
+     <item row="0" column="1" rowspan="3">
       <widget class="QTableWidget" name="tbwAnalysisRes">
-=======
-     <item row="0" column="1" rowspan="2">
-      <widget class="QTableWidget" name="tableWidget_2">
->>>>>>> Stashed changes
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
          <horstretch>0</horstretch>
@@ -177,7 +141,7 @@
        <property name="maximumSize">
         <size>
          <width>470</width>
-         <height>16777215</height>
+         <height>190</height>
         </size>
        </property>
       </widget>
@@ -213,13 +177,20 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="3">
-      <widget class="QLineEdit" name="txtOrder"/>
-     </item>
      <item row="0" column="2">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Order</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QLineEdit" name="txtOrder">
+       <property name="maximumSize">
+        <size>
+         <width>100</width>
+         <height>22</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -235,8 +206,8 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>90</y>
-     <width>804</width>
+     <y>70</y>
+     <width>801</width>
      <height>361</height>
     </rect>
    </property>
@@ -312,8 +283,6 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
-<<<<<<< Updated upstream
-=======
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
         <string>Simulation Outputs</string>
@@ -323,20 +292,20 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>440</width>
-          <height>312</height>
+          <width>411</width>
+          <height>290</height>
          </rect>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+         <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>440</width>
-          <height>312</height>
+          <width>410</width>
+          <height>290</height>
          </size>
         </property>
         <property name="maximumSize">
@@ -356,31 +325,30 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>440</width>
-          <height>312</height>
+          <width>410</width>
+          <height>290</height>
          </rect>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+         <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="minimumSize">
          <size>
-          <width>440</width>
-          <height>312</height>
+          <width>0</width>
+          <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>440</width>
-          <height>312</height>
+          <width>410</width>
+          <height>290</height>
          </size>
         </property>
        </widget>
       </widget>
->>>>>>> Stashed changes
      </widget>
     </item>
     <item>
@@ -425,7 +393,7 @@
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
       <property name="selectionBehavior">
-       <enum>QAbstractItemView::SelectItems</enum>
+       <enum>QAbstractItemView::SelectRows</enum>
       </property>
       <property name="indentation">
        <number>10</number>
